--- a/nginx/static/sample.html
+++ b/nginx/static/sample.html
@@ -11,7 +11,7 @@
                 data-field="name_assist"
                 data-results_num="3"
                 data-results="name_assist,address1_assist,address2_assist"
-                data-result_headers="顧客,住所1,住所2">
+                data-result_headers="Client Name,Address1,Address2">
             </input>
         </div>
         <div class="form-group">
@@ -22,7 +22,7 @@
                 data-results_num="3"
                 data-results="zip_cd_assist,address1_assist,address2_assist"
                 data-assist_targets="assist-zip,assist-address"
-                data-result_headers="郵便番号,住所1,住所2">
+                data-result_headers="Zip Code,Address1,Address2">
             </input>
         </div>
         <div class="form-group">
@@ -37,7 +37,7 @@
                 data-results_num="3"
                 data-results="person_assist,phone_assist,fax_assist"
                 data-assist_targets="assist-person,assist-phone,assist-fax"
-                data-result_headers="担当者,電話番号,FAX">
+                data-result_headers="Person,Phone Number,FAX">
             </input>
         </div>
         <div class="form-group">
