--- a/nginx/static/sample.html
+++ b/nginx/static/sample.html
@@ -8,6 +8,7 @@
             <div>Client</div>
             <input type="text" class="fess-suggest fess-assist"
                 data-fess_url="http://localhost:10080/json"
+                data-label="client"
                 data-field="name_assist"
                 data-results_num="3"
                 data-results="name_assist,address1_assist,address2_assist"
@@ -18,6 +19,7 @@
             <div>Zip Code</div>
             <input type="text" id="assist-zip" class="fess-suggest fess-assist"
                 data-fess_url="http://localhost:10080/json"
+                data-label="client"
                 data-field="zip_cd_assist"
                 data-results_num="3"
                 data-results="zip_cd_assist,address1_assist,address2_assist"
@@ -33,6 +35,7 @@
             <div>Person</div>
             <input type="text" id="assist-person" class="fess-suggest fess-assist"
                 data-fess_url="http://localhost:10080/json"
+                data-label="client"
                 data-field="person_assist"
                 data-results_num="3"
                 data-results="person_assist,phone_assist,fax_assist"
