Fix behavior of down arrow key.

--- a/nginx/static/sample.html
+++ b/nginx/static/sample.html
@@ -6,7 +6,7 @@
     <div class="fess-form-assist apply-style">
         <div class="form-group">
             <div>Client</div>
-            <input type="text" class="fess-suggest fess-assist"
+            <input type="text" class="fess-suggest fess-assist" autocomplete="off"
                 data-fess_url="http://localhost:10080/json"
                 data-label="client"
                 data-field="name_assist"
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
             <div>Zip Code</div>
-            <input type="text" id="assist-zip" class="fess-suggest fess-assist"
+            <input type="text" id="assist-zip" class="fess-suggest fess-assist" autocomplete="off"
                 data-fess_url="http://localhost:10080/json"
                 data-label="client"
                 data-field="zip_cd_assist"
@@ -29,11 +29,11 @@
         </div>
         <div class="form-group">
             <div>Address</div>
-            <input type="text" id="assist-address" class="fess-assist" data-field="address_assist"></input>
+            <input type="text" id="assist-address" class="fess-assist" autocomplete="off" data-field="address_assist"></input>
         </div>
         <div class="form-group">
             <div>Person</div>
-            <input type="text" id="assist-person" class="fess-suggest fess-assist"
+            <input type="text" id="assist-person" class="fess-suggest fess-assist" autocomplete="off"
                 data-fess_url="http://localhost:10080/json"
                 data-label="client"
                 data-field="person_assist"
@@ -46,13 +46,13 @@
         <div class="form-group">
             <div>
                 <div>Phone</div>
-                <input type="text" id="assist-phone" class="fess-assist" data-field="phone_assist"></input>
+                <input type="text" id="assist-phone" class="fess-assist" autocomplete="off" data-field="phone_assist"></input>
             </div>
         </div>
         <div class="form-group">
             <div>
                 <div>Fax</div>
-                <input type="text" id="assist-fax" class="fess-assist" data-field="fax_assist"></input>
+                <input type="text" id="assist-fax" class="fess-assist" autocomplete="off" data-field="fax_assist"></input>
             </div>
         </div>
         
