--- a/nginx/static/sample.html
+++ b/nginx/static/sample.html
@@ -7,7 +7,7 @@
         <div class="form-group">
             <div>Client</div>
             <input type="text" class="fess-suggest fess-assist" autocomplete="off"
-                data-fess_url="http://localhost:10080/json"
+                data-fess_url="http://localhost/json"
                 data-label="client"
                 data-field="name_assist"
                 data-results_num="3"
@@ -18,7 +18,7 @@
         <div class="form-group">
             <div>Zip Code</div>
             <input type="text" id="assist-zip" class="fess-suggest fess-assist" autocomplete="off"
-                data-fess_url="http://localhost:10080/json"
+                data-fess_url="http://localhost/json"
                 data-label="client"
                 data-field="zip_cd_assist"
                 data-results_num="3"
@@ -34,7 +34,7 @@
         <div class="form-group">
             <div>Person</div>
             <input type="text" id="assist-person" class="fess-suggest fess-assist" autocomplete="off"
-                data-fess_url="http://localhost:10080/json"
+                data-fess_url="http://localhost/json"
                 data-label="client"
                 data-field="person_assist"
                 data-results_num="3"
@@ -55,7 +55,7 @@
                 <input type="text" id="assist-fax" class="fess-assist" autocomplete="off" data-field="fax_assist"></input>
             </div>
         </div>
-        
+
     </div>
 </form>
 
